move ml model no data handling to model metadata
