# services/src/api/handlers/permissions.rs
@@ -326,12 +326,11 @@ mod tests {
 
     use super::*;
     use crate::{
-        api::model::datatypes::{MlTensorShape3D, RasterDataType as ApiRasterDataType},
         contexts::PostgresContext,
         datasets::upload::{Upload, UploadDb, UploadId},
         ge_context,
         layers::{layer::AddLayer, listing::LayerCollectionProvider, storage::LayerDb},
-        machine_learning::{MlModel, MlModelIdAndName, MlModelMetadata},
+        machine_learning::{MlModel, MlModelIdAndName },
         users::{UserAuth, UserCredentials, UserRegistration},
         util::tests::{
             add_ndvi_to_datasets2, add_ports_to_datasets, admin_login, read_body_string,
@@ -341,11 +340,9 @@ mod tests {
     };
     use actix_http::header;
     use actix_web_httpauth::headers::authorization::Bearer;
-    use geoengine_datatypes::{primitives::Coordinate2D, util::Identifier};
+    use geoengine_datatypes::{machine_learning::MlTensorShape3D, primitives::Coordinate2D, raster::RasterDataType, util::Identifier};
     use geoengine_operators::{
-        engine::{RasterOperator, TypedOperator, VectorOperator, WorkflowOperatorPath},
-        mock::{MockPointSource, MockPointSourceParams},
-        source::{GdalSource, GdalSourceParameters, OgrSource, OgrSourceParameters},
+        engine::{RasterOperator, TypedOperator, VectorOperator, WorkflowOperatorPath}, machine_learning::{MlModelInputNoDataHandling, MlModelMetadata, MlModelOutputNoDataHandling}, mock::{MockPointSource, MockPointSourceParams}, source::{GdalSource, GdalSourceParameters, OgrSource, OgrSourceParameters}
     };
     use serde_json::{Value, json};
     use tokio_postgres::NoTls;
@@ -526,14 +523,14 @@ mod tests {
         let model = MlModel {
             description: "No real model here".to_owned(),
             display_name: "my unreal model".to_owned(),
-            metadata: MlModelMetadata {
-                file_name: "myUnrealmodel.onnx".to_owned(),
-                input_type: ApiRasterDataType::F32,
+            file_name: "myUnrealmodel.onnx".to_owned(),
+            metadata: MlModelMetadata {                
+                input_type: RasterDataType::F32,
                 input_shape: MlTensorShape3D::new_single_pixel_bands(17),
                 output_shape: MlTensorShape3D::new_single_pixel_single_band(),
-                output_type: ApiRasterDataType::F64,
-                in_no_data_code: None,
-                out_no_data_code: None,
+                output_type: RasterDataType::F64,
+                input_no_data_handling: MlModelInputNoDataHandling::SkipIfNoData,
+                output_no_data_handling: MlModelOutputNoDataHandling::NanIsNoData,
             },
             name: MlModelName::new(None, "myUnrealModel").into(),
             upload: upload_id,
